round off gate coords to fix asymmetry

--- a/analysis/trijunction.ipynb
+++ b/analysis/trijunction.ipynb
@@ -2,35 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "c2e1bd60-79e0-4203-a46a-e17a998b3e0a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "from shapely.geometry import Point, LineString, Polygon\n",
+    "from shapely.ops import split, unary_union\n",
+    "from itertools import product\n",
     "from collections import OrderedDict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "45461fc7-d88b-4c6d-89d6-c854516ea4a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "L = 10\n",
-    "gap = 1\n",
-    "channel_width = 5\n",
-    "angle = np.pi/4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 62,
    "id": "a1cd2cec-1675-4dea-b04c-29ef1d6eab54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gate_coords(L=41, gap=4, channel_width=11, angle=np.pi / 4):\n",
+    "def gate_coords(grid_spacing, L=41, gap=4, channel_width=11, angle=np.pi / 4):\n",
     "    \"\"\"Find the gate coordinates that defines the trijunction\n",
     "\n",
     "    L: Channel length\n",
@@ -68,7 +59,7 @@
     "    tcoords_p = shift(top, channel_width/2)\n",
     "\n",
     "    lr = np.vstack((right.coords, left.coords[::-1]))\n",
-    "    lr[:, 1] -= channel_width / 2\n",
+    "    lr[:, 1] -= channel_width/2\n",
     "    lr[0, 0] -= distance_to_axis\n",
     "    lr[-1, 0] += distance_to_axis\n",
     "    truncate = lr[lr[:, 1] < 0.0].copy()\n",
@@ -108,10 +99,10 @@
     "        ]\n",
     "    )\n",
     "\n",
-    "    top, bottom = list(gates[1].difference(splitter.buffer(gap)).geoms)\n",
+    "    top, bottom = list(gates[1].difference(splitter.buffer(gap/2)).geoms)\n",
     "\n",
-    "    left_1 = np.array(bottom.exterior.coords)\n",
-    "    top_1 = np.array(top.exterior.coords)\n",
+    "    left_1 = np.round(bottom.exterior.coords)\n",
+    "    top_1 = np.round(top.exterior.coords)\n",
     "    top_2 = top_1.copy() @ [[-1, 0], [0, 1]]\n",
     "    right_2 = left_1.copy() @ [[-1, 0], [0, 1]]\n",
     "\n",
@@ -121,9 +112,9 @@
     "        [Point(point) for point in product([0.0], np.unique(coords[:, 1]))]\n",
     "    )\n",
     "\n",
-    "    left_2, _ = list(gates[0].difference(splitter.buffer(gap)).geoms)\n",
-    "    left_2 = np.array(left_2.exterior.coords)\n",
+    "    left_2, _ = list(gates[0].difference(splitter.buffer(gap/2)).geoms)\n",
     "    \n",
+    "    left_2 = np.round(left_2.exterior.coords)\n",
     "    right_1 = left_2.copy() @ [[-1, 0], [0, 1]]\n",
     "    \n",
     "    gates_vertex = [\n",
@@ -131,43 +122,71 @@
     "        right_1, right_2, \n",
     "        top_1, top_2\n",
     "    ]\n",
-    "    gate_names = [\"left_1\", \"left_2\", \"right_1\", \"right_2\", \"top_1\", \"top_2\"]\n",
+    "\n",
     "    \n",
     "    gate_names = [\"left_1\", \"left_2\", \"right_1\", \"right_2\", \"top_1\", \"top_2\"]\n",
-    "    boundaries = OrderedDict(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax)\n",
+    "    assert min(left_1[:, 0]) == min(top_1[:, 0])\n",
+    "    assert max(right_2[:, 0]) == max(top_2[:, 0])\n",
+    "    \n",
+    "    boundaries = OrderedDict(xmin = min(left_1[:, 0]), xmax = max(right_2[:, 0]),\n",
+    "                             ymin = min(left_1[:, 1]), ymax = max(top_1[:, 1]))\n",
+    "            \n",
     "    channel_center = OrderedDict(left = np.hstack(tail), \n",
     "                          right = np.hstack(tail*-1), \n",
     "                          top = np.hstack([0, L+head[1]]))\n",
+    "    print(L, head)\n",
     "    \n",
     "    return gates_vertex, gate_names, boundaries, channel_center "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "6513d101-e9aa-4904-b1d4-433f0e21dc2a",
+   "execution_count": 63,
+   "id": "45461fc7-d88b-4c6d-89d6-c854516ea4a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gates_vertices, gates_name, boundary, centers = gate_coords(L, gap, channel_width, angle)"
+    "L = 41\n",
+    "gap = 4\n",
+    "channel_width = 7\n",
+    "angle = np.pi/4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 64,
+   "id": "6513d101-e9aa-4904-b1d4-433f0e21dc2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41 [[ 0.  ]\n",
+      " [28.99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gates_vertices, gates_name, boundary, centers = gate_coords(0.5, L, gap, channel_width, angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "id": "4776e36a-8626-49db-a8cf-c8146c877f78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-10.8756 -0.8056000000000001 21.7512 18.681199999999997\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,17.07)\"><g><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.435024\" opacity=\"0.6\" d=\"M -4.07,0.0 L -1.0,3.4471498771498776 L -1.0,0.0 L -4.07,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.435024\" opacity=\"0.6\" d=\"M 1.0,3.4471498771498776 L 4.07,0.0 L 1.0,0.0 L 1.0,3.4471498771498776 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.435024\" opacity=\"0.6\" d=\"M -10.07,0.0 L -10.07,6.07 L -4.0,6.07 L -10.07,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.435024\" opacity=\"0.6\" d=\"M 10.07,6.07 L 10.07,0.0 L 4.0,6.07 L 10.07,6.07 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.435024\" opacity=\"0.6\" d=\"M -10.07,17.07 L -2.5,17.07 L -2.5,8.07 L -10.07,8.07 L -10.07,17.07 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.435024\" opacity=\"0.6\" d=\"M 2.5,8.07 L 2.5,17.07 L 10.07,17.07 L 10.07,8.07 L 2.5,8.07 z\" /></g></g></svg>"
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-36.8 -2.8000000000000003 73.6 75.6\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,70.0)\"><g><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -23.0,0.0 L -2.0,23.0 L -2.0,0.0 L -23.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 2.0,23.0 L 23.0,0.0 L 2.0,0.0 L 2.0,23.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -34.0,0.0 L -34.0,27.0 L -8.0,27.0 L -34.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 34.0,27.0 L 34.0,0.0 L 8.0,27.0 L 34.0,27.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -34.0,70.0 L -4.0,70.0 L -4.0,31.0 L -34.0,31.0 L -34.0,70.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 4.0,31.0 L 4.0,70.0 L 34.0,70.0 L 34.0,31.0 L 4.0,31.0 z\" /></g></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.multipolygon.MultiPolygon at 0x7fd98c1e23b0>"
+       "<shapely.geometry.multipolygon.MultiPolygon at 0x7fb5b49bed10>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,8 +197,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "f85a51c7-8d79-4d2b-8dcf-65e081e829a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[-34.,   0.],\n",
+       "        [-34.,  27.],\n",
+       "        [ -8.,  27.],\n",
+       "        [-34.,   0.]]),\n",
+       " array([[ -2.,  23.],\n",
+       "        [ -2.,   0.],\n",
+       "        [-23.,   0.],\n",
+       "        [ -2.,  23.]]),\n",
+       " array([[ 2., 23.],\n",
+       "        [ 2.,  0.],\n",
+       "        [23.,  0.],\n",
+       "        [ 2., 23.]]),\n",
+       " array([[34.,  0.],\n",
+       "        [34., 27.],\n",
+       "        [ 8., 27.],\n",
+       "        [34.,  0.]]),\n",
+       " array([[ -4.,  70.],\n",
+       "        [ -4.,  31.],\n",
+       "        [-34.,  31.],\n",
+       "        [-34.,  70.],\n",
+       "        [ -4.,  70.]]),\n",
+       " array([[ 4., 70.],\n",
+       "        [ 4., 31.],\n",
+       "        [34., 31.],\n",
+       "        [34., 70.],\n",
+       "        [ 4., 70.]])]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gates_vertices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "e37524bc-2aaf-4f83-9fd0-39414559de98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('xmin', -34.0), ('xmax', 34.0), ('ymin', 0.0), ('ymax', 70.0)])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boundary"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0b7188ee-e18e-43bc-b51c-9e123a6bb63c",
+   "id": "27fe6ef8-43f1-4b6d-ba9f-bc5e2962a7f7",
    "metadata": {},
    "outputs": [],
    "source": []
