--- a/analysis/Y.ipynb
+++ b/analysis/Y.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f8af4325-cb1d-497e-939c-800e15d15096",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "21c76eab-e8f2-4222-80a7-36d75ac9b5bf",
    "metadata": {
@@ -299,7 +307,7 @@
    "metadata": {},
    "source": [
     "plt.scatter(poisson_sites[:, 0], poisson_sites[:, 1], c = to_check)\n",
-    "# print(min(poisson_sites[:, 0]), max(poisson_sites[:, 0]))\n",
+    "# print(min(poisson_sites[:, 0]), max(poisson_sits[:, 0]))\n",
     "plt.colorbar()\n",
     "for gate, indices in optimize.poisson_system.regions.voltage.tag_points.items():\n",
     "    if gate.split('_')[0] not in ['dirichlet', 'global']:\n",
@@ -627,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "e83c69b9-43a5-4da6-8083-6d59622d3a03",
    "metadata": {},
    "outputs": [],
