--- a/analysis/trijunction.ipynb
+++ b/analysis/trijunction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "c2e1bd60-79e0-4203-a46a-e17a998b3e0a",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "a1cd2cec-1675-4dea-b04c-29ef1d6eab54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gate_coords(grid_spacing, L=41, gap=4, channel_width=11, angle=np.pi / 4):\n",
+    "def gate_coords(grid_spacing, L=41, gap=4, channel_width=11, angle=np.pi / 3):\n",
     "    \"\"\"Find the gate coordinates that defines the trijunction\n",
     "\n",
     "    L: Channel length\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "45461fc7-d88b-4c6d-89d6-c854516ea4a9",
    "metadata": {},
    "outputs": [],
@@ -149,12 +149,12 @@
     "L = 41\n",
     "gap = 4\n",
     "channel_width = 7\n",
-    "angle = np.pi/4"
+    "angle = np.pi/5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "id": "6513d101-e9aa-4904-b1d4-433f0e21dc2a",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
      "output_type": "stream",
      "text": [
       "41 [[ 0.  ]\n",
-      " [28.99]]\n"
+      " [33.17]]\n"
      ]
     }
    ],
@@ -173,20 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "id": "4776e36a-8626-49db-a8cf-c8146c877f78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-36.8 -2.8000000000000003 73.6 75.6\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,70.0)\"><g><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -23.0,0.0 L -2.0,23.0 L -2.0,0.0 L -23.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 2.0,23.0 L 23.0,0.0 L 2.0,0.0 L 2.0,23.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -34.0,0.0 L -34.0,27.0 L -8.0,27.0 L -34.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 34.0,27.0 L 34.0,0.0 L 8.0,27.0 L 34.0,27.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M -34.0,70.0 L -4.0,70.0 L -4.0,31.0 L -34.0,31.0 L -34.0,70.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5119999999999998\" opacity=\"0.6\" d=\"M 4.0,31.0 L 4.0,70.0 L 34.0,70.0 L 34.0,31.0 L 4.0,31.0 z\" /></g></g></svg>"
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-32.96 -2.96 65.92 79.91999999999999\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,74.0)\"><g><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5983999999999998\" opacity=\"0.6\" d=\"M -19.0,0.0 L -2.0,26.0 L -2.0,0.0 L -19.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5983999999999998\" opacity=\"0.6\" d=\"M 2.0,26.0 L 19.0,0.0 L 2.0,0.0 L 2.0,26.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5983999999999998\" opacity=\"0.6\" d=\"M -30.0,0.0 L -30.0,31.0 L -7.0,31.0 L -30.0,0.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5983999999999998\" opacity=\"0.6\" d=\"M 30.0,31.0 L 30.0,0.0 L 7.0,31.0 L 30.0,31.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5983999999999998\" opacity=\"0.6\" d=\"M -30.0,74.0 L -4.0,74.0 L -4.0,35.0 L -30.0,35.0 L -30.0,74.0 z\" /><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.5983999999999998\" opacity=\"0.6\" d=\"M 4.0,35.0 L 4.0,74.0 L 30.0,74.0 L 30.0,35.0 L 4.0,35.0 z\" /></g></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.multipolygon.MultiPolygon at 0x7fb5b49bed10>"
+       "<shapely.geometry.multipolygon.MultiPolygon at 0x7f853101ca30>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,42 +197,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "f85a51c7-8d79-4d2b-8dcf-65e081e829a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[-34.,   0.],\n",
-       "        [-34.,  27.],\n",
-       "        [ -8.,  27.],\n",
-       "        [-34.,   0.]]),\n",
-       " array([[ -2.,  23.],\n",
+       "[array([[-45.,   0.],\n",
+       "        [-45.,   9.],\n",
+       "        [-13.,   9.],\n",
+       "        [-45.,   0.]]),\n",
+       " array([[ -2.,   7.],\n",
        "        [ -2.,   0.],\n",
-       "        [-23.,   0.],\n",
-       "        [ -2.,  23.]]),\n",
-       " array([[ 2., 23.],\n",
+       "        [-34.,   0.],\n",
+       "        [ -2.,   7.]]),\n",
+       " array([[ 2.,  7.],\n",
        "        [ 2.,  0.],\n",
-       "        [23.,  0.],\n",
-       "        [ 2., 23.]]),\n",
-       " array([[34.,  0.],\n",
-       "        [34., 27.],\n",
-       "        [ 8., 27.],\n",
-       "        [34.,  0.]]),\n",
-       " array([[ -4.,  70.],\n",
-       "        [ -4.,  31.],\n",
-       "        [-34.,  31.],\n",
-       "        [-34.,  70.],\n",
-       "        [ -4.,  70.]]),\n",
-       " array([[ 4., 70.],\n",
-       "        [ 4., 31.],\n",
-       "        [34., 31.],\n",
-       "        [34., 70.],\n",
-       "        [ 4., 70.]])]"
+       "        [34.,  0.],\n",
+       "        [ 2.,  7.]]),\n",
+       " array([[45.,  0.],\n",
+       "        [45.,  9.],\n",
+       "        [13.,  9.],\n",
+       "        [45.,  0.]]),\n",
+       " array([[ -4.,  52.],\n",
+       "        [ -4.,  13.],\n",
+       "        [-45.,  13.],\n",
+       "        [-45.,  52.],\n",
+       "        [ -4.,  52.]]),\n",
+       " array([[ 4., 52.],\n",
+       "        [ 4., 13.],\n",
+       "        [45., 13.],\n",
+       "        [45., 52.],\n",
+       "        [ 4., 52.]])]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,17 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "e37524bc-2aaf-4f83-9fd0-39414559de98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OrderedDict([('xmin', -34.0), ('xmax', 34.0), ('ymin', 0.0), ('ymax', 70.0)])"
+       "OrderedDict([('xmin', -41.0), ('xmax', 41.0), ('ymin', 0.0), ('ymax', 62.0)])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,6 +266,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "27fe6ef8-43f1-4b6d-ba9f-bc5e2962a7f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e857404-e555-45fb-a9fb-5fead058ec1a",
    "metadata": {},
    "outputs": [],
    "source": []
